# rust-firebase-js

./: .gitignore  404.html  Cargo.toml  README.md  chapter_1.html  docgen-macro.rs  firebase-js-sys.code-workspace  index.html  introduction.html  package_relationships.html  print.html  searchindex.js  searchindex.json  the_problem.html
.cargo/: config.toml
.github/: ci.yml  deploy.yml
.github/workflows/: _deploy.yml  deploy-book.yml  deploy.yml  firebase_js_tests.yml
book/: deploy.sh
book/src/: SUMMARY.md  introduction.md  package_relationships.md  the_problem.md
book/src/extract_doctest/: introduction.md
book/src/firebase_js/: introduction.md  js_semantics.md  structure.md
book/src/firebase_js_sys/: introduction.md  structure.md
book/src/firebase_types/: firebase_config.md  introduction.md
book/src/js_bind/: introduction.md
docs/: book.toml
extract-doctest/: Cargo.toml  README.md
extract-doctest/core/: Cargo.toml
extract-doctest/core/src/: lib.rs
extract-doctest/examples/: simple_usage.rs
extract-doctest/examples/simple-usage/: Cargo.toml
extract-doctest/examples/simple-usage/src/: lib.rs
extract-doctest/proc/: Cargo.toml
extract-doctest/proc/src/: lib.rs
extract-doctest/src/: lib.rs
extract-doctest/tests/ui/: no_attrs.rs  no_attrs.stderr  not_supported.rs
extract-doctests/: Cargo.toml  TODO.md
extract-doctests/core/: Cargo.toml
extract-doctests/core/src/: lib.rs
extract-doctests/examples/: package_replace_usage.rs  simple_usage.rs  simple_usage_extern.rs  wasmbindgen_usage.rs
extract-doctests/proc/: Cargo.toml
extract-doctests/proc/src/: lib.rs
extract-doctests/src/: lib.rs
extract-doctests/tests/: inline_config.rs
extract-doctests/tests/ui/: bad_attr_ident1.rs  bad_attr_ident1.stderr  bad_attr_ident2.rs  bad_attr_ident2.stderr  not_supported.rs  not_supported.stderr
firebase-js/: Cargo.toml  README.md  Trunk.toml  package.json
firebase-js-sys/: Cargo.toml  README.md  Trunk.toml  build.rs  debug-docgen.rs  docgen-macro.rs  index.html  js-bind.toml  package.json  pnpm-lock.yaml  rollup.config.js  test  test.sh  tsconfig.json
firebase-js-sys/.cargo/: config.toml
firebase-js-sys/examples/: init_app.rs
firebase-js-sys/firebase-interop/: app.js  bundle.js  chunk-index.esm2017.js  database.js  index.esm2017-e441abf0.js
firebase-js-sys/js/: app.ts  bundle-cjs.js  bundle-esm.js  bundle.ts  database.ts  helper.ts  node.config.js  web.config.js
firebase-js-sys/proc/: Cargo.toml  JS.toml  debug.rs
firebase-js-sys/proc/impl/: Cargo.toml
firebase-js-sys/proc/impl/src/: lib.rs
firebase-js-sys/proc/src/: lib.rs  main.rs  understand.txt
firebase-js-sys/src/: app.rs  database.rs  debug-jsbind.rs  debug-manual.rs  lib.rs  main.rs  semantic_app.rs  semantic_database.rs  testing.rs
firebase-js-sys/src/exports/: app.rs
firebase-js-sys/src/typed/: app.rs
firebase-js-sys/tests/: app.rs  initialize_app.rs  t.json
firebase-js/.cargo/: config.toml
firebase-js/src/: app.rs  database.rs  db.rs  lib.rs  main.rs
firebase-js/src/js_semantic/: app.rs  database.rs
firebase-js/src/rusty/: mod.rs
firebase-js/tests/: initialize_app.rs
firebase-types/: Cargo.toml  README.md  test.sh
firebase-types/.cargo/: config.toml
firebase-types/src/: config.rs  errors.rs  lib.rs
firebase_js/: introduction.html
firebase_js_sys/: introduction.html
firebase_types/: introduction.html
js-bind/: Cargo.toml  README.md  _Cargo.toml  debug-docgen.rs  docgen-macro.rs
js-bind-tests/: Cargo.toml  build.rs  debug.rs  js-bind-lock.toml  js-bind.toml  package.json  pnpm-lock.yaml  tsconfig.json
js-bind-tests/js/: bundle-cjs.js  bundle-es.js  bundle-esm.js  bundle.ts  node.config.js  web.config.mjs
js-bind-tests/src/: main.rs  understand.txt
js-bind/.cargo/: config.toml
js-bind/core/: Cargo.toml  JS.toml  README.md  _Cargo.toml  debug-docgen.rs  debug.rs  docgen-macro.rs  js-bind-defaults.toml
js-bind/core/_src/: TODO.md  config.rs
js-bind/core/src/: config.rs  docs.rs  js_bind_impl.rs  js_codegen.rs  lib.rs  macros.rs  understand.txt
js-bind/core/src/impls/: _js_bind.rs  js_bind.rs  mod.rs  target_name.rs
js-bind/examples/: trivial_usage.rs
js-bind/examples/doctest/: js-bind.toml
js-bind/examples/testing-configs/: firebase.js-bind.toml  js-bind.toml  testing-flag-enabled.toml
js-bind/examples/trivial_usage/: debug.rs  main.rs
js-bind/proc/: Cargo.toml  README.md  _Cargo.toml
js-bind/proc/src/: _debug.rs  lib.rs
js-bind/src/: lib.rs
