[workspace]
members = [
	"extract-doctests",
	"extract-doctests/proc",
	"extract-doctests/core",

	"firebase-js-sys",
	"firebase-types",
]
exclude = ["firebase-js"]

[workspace.package]
# REMEMBER: UPDATE in js-bind/Cargo.toml !!
authors = []
homepage = "https://actuallyhappening.github.io/rust-firebase-js/"
repository = "https://github.com/ActuallyHappening/rust-firebase-js"
license = "MIT"
license-file = "LICENSE"
documentation = "https://actuallyhappening.github.io/rust-firebase-js/"
