[workspace]
members = [
	"extract-doctests",
	"extract-doctests/proc",
	"extract-doctests/core",

	"firebase-js-sys",
	"firebase-types",
]
exclude = ["firebase-js"]

[workspace.package]
# REMEMBER: UPDATE in js-bind/Cargo.toml !!
authors = []
homepage = "https://actuallyhappening.github.io/rust-firebase-js/"
repository = "https://github.com/ActuallyHappening/rust-firebase-js"
license = "MIT"
license-file = "LICENSE"
documentation = "https://actuallyhappening.github.io/rust-firebase-js/"

[workspace.dependencies]
js-sys = "0.3.63"
wasm-bindgen = { version = "0.2.86", features = ["serde"] }
wasm-bindgen-test = "0.3.36"

[workspace.dependencies.firebase-js-sys]
path = "./firebase-js-sys"
# version = "0.0.1"

[workspace.dependencies.extract-doctests]
path = "./extract-doctests"
# version = "0.0.1"

[workspace.dependencies.extract-doctests-proc]
path = "./extract-doctests/proc"
# version = "0.0.1"

[workspace.dependencies.extract-doctests-core]
path = "./extract-doctests/core"
# version = "0.0.1"