[package]
name = "extract-doctest"
description = "Proc macro to extract doctests into abitrary code (typically wasm32 unit tests)"
version = "0.0.1"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
# TODO: Add more specific documentation link
documentation = "https://actuallyhappening.github.io/rust-firebase-js/"

[dependencies.extract-doctest-proc]
path = "./proc"
version = "0.0.1"

[dependencies.extract-doctest-core]
path = "./core"
version = "0.0.1"