[package]
name = "extract-doctests"
description = "Proc macro to extract doctests into abitrary code (typically wasm32 unit tests)"
version = "0.0.1"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
# TODO: Add more specific documentation link
documentation = "https://actuallyhappening.github.io/rust-firebase-js/"

[dependencies.extract-doctests-proc]
path = "./proc"
version = "0.0.1"

[dependencies.extract-doctests-core]
path = "./core"
version = "0.0.1"

[dev-dependencies]
trybuild = "1.0.80"
wasm-bindgen = "0.2.85"
wasm-bindgen-test = "0.3.35"