[package]
name = "extract-doctests"
description = "Proc macro to extract doctests into abitrary code (typically wasm32 unit tests)"
version = "0.0.1"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
# TODO: Add more specific documentation link
documentation = "https://actuallyhappening.github.io/rust-firebase-js/"

[dependencies.extract-doctests-proc]
workspace = true
# path = "./proc"
# version = "0.0.1"

[dependencies.extract-doctests-core]
workspace = true
# path = "./core"
# version = "0.0.1"

[dev-dependencies]
trybuild = "1.0.80"
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }