[package]
name = "firebase-js-sys"
version = "0.1.0"
description = "`wasm32-unknown-unknown` bindings for the Firebase modular JS SDK (`npm` firebase@9)"
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js-sys"
edition = "2021"
authors = []
license = "MIT"
keywords = ["firebase", "firebase-js", "firebase-database", "wasm", "wasm-bindgen"]
categories = ["wasm", "web-programming"]

# [workspace]
# members = [
# 	"firebase-wasm-rs"
# ]

[features]
default = ["web"]
web = []
node = []

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0" }
log = "0.4.17"
wasm-bindgen = { version = "0.2.84" }

# Local deps
[dependencies.firebase-types]
path = "../firebase-types"

[dev-dependencies]
execute = "0.2.12"
wasm-bindgen-test = "0.3.34"
