[package]
name = "firebase-js-sys"
version = "0.1.0"
description = "`wasm32-unknown-unknown` bindings for the Firebase modular JS SDK (`npm` firebase@9)"
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js-sys"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = ["firebase", "firebase-js", "firebase-database", "wasm", "wasm-bindgen"]
categories = ["wasm", "web-programming"]

# [workspace]
# members = [
# 	"firebase-wasm-rs"
# ]

[features]
default = ["node-not-web"]

### If multiple runtimes could be linked to at once, you would end up with two seperate instances of `firebase` in the final bundle (which is bad!)
### For that reason, you must enable one of the following features to specify which runtime you want to link to:

## Enable to link for a `web` runtime, not a node runtime.
## **This is mutually exlusive to `node-not-web`** as only one runtime can be linked to at a time.
web-not-node = []

## Enable to link for a `node` runtime, not a web runtime.
## **This is mutually exlusive to `default`** as only one runtime can be linked to at a time.
node-not-web = []

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0" }
document-features = "0.2.7"
log = "0.4.17"
wasm-bindgen = { version = "0.2.84" }

# Local deps
firebase-types = { path = "../firebase-types" }
firebase-js-sys-proc = { path = "./proc" }


[dev-dependencies]
execute = "0.2.12"
wasm-bindgen-test = "0.3.34"
