[package]
name = "firebase-js-sys"
version = "0.0.1"
description = "`wasm32-unknown-unknown` bindings for the Firebase modular JS SDK (`npm` firebase@9)"
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js-sys"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = ["firebase", "firebase-js", "firebase-database", "wasm", "wasm-bindgen"]
categories = ["wasm", "web-programming"]

# disable autotest recognition
# autotests = false

exclude = [
	"*",
	"!js/bundle-*.js",
	"!src",
	"!Cargo.toml",
	"!Cargo.lock",
	"!js-bind.toml",
]

# [workspace]
# members = [
# 	"firebase-wasm-rs"
# ]

[package.metadata.scripts]
test = "./test.sh"
testq = "./test.sh 2>/dev/null"

[package.metadata.extract-doctests]
replace-package = "firebase_js_sys"
template = """
#[cfg(test)]
#[::wasm_bindgen_test::wasm_bindgen_test]
fn {test_name}_jsbind_doctestgen() {
	#[cfg(feature = "web-not-node")]
	::wasm_bindgen_test::wasm_bindgen_test_configure!(run_in_browser);

	{code}
}
"""


[features]
# default = ["node-not-web", "verbose-logging"]
default = ["web-not-node", "verbose-logging"]

### If multiple runtimes could be linked to at once, you would end up with two seperate instances of `firebase` in the final bundle (which is bad!)
### For that reason, you must enable one of the following features to specify which runtime you want to link to:

## Enable to link for a `web` runtime, not a node runtime.
## **This is mutually exlusive to `node-not-web`** as only one runtime can be linked to at a time.
web-not-node = []

## Enable to link for a `node` runtime, not a web runtime.
## **This is mutually exlusive to `default`** as only one runtime can be linked to at a time.
node-not-web = []

## Adds lots of logging for debugging purposes :)
verbose-logging = []

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0" }
document-features = "0.2.7"
log = "0.4.17"
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

# Local deps
[dependencies.extract-doctests]
workspace = true
# path = "../extract-doctests"
# version = "0.0.1"

# [dependencies.firebase-types]
# path = "../firebase-types"
# version = "0.0.1" # TODO: Update firebase-types on crates.io

# firebase-js-sys-proc = { path = "./proc", default-features = false }
# js-bind = { path = "../js-bind" }

# [dependencies.firebase-types]
# path = "../firebase-types"
# version = "0.0.1"


[dev-dependencies]
execute = "0.2.12"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"
wasm-bindgen-test = { workspace = true }