[package]
name = "firebase-js"
version = "0.0.1"
description = "High level interop with `npm`s `firebase@9` package for `wasm32-unknown-unknown` web targets."
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js"
edition = "2021"
authors = []
license = "MIT"
keywords = ["firebase", "firebase-js", "firebase-database", "wasm", "wasm-bindgen"]
categories = ["api-bindings", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0" }
log = "0.4.17"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.84", features = ["serde"] }

# Local dep
firebase-js-sys = { path = "../firebase-js-sys", version = "0.1.0" }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
derive-deref-rs = "0.1.1"
derive-new = "0.5.9"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
