[package]
name = "js-bind-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
link-node = []
link-web = []

[dependencies]
js-bind = { path = "../js-bind" }
toml = "0.7.3"
wasm-bindgen = "0.2.84"

[build-dependencies]
js-bind = { path = "../js-bind" }
