[package]
name = "js-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

# Local deps
js-bind-proc = { path = "./proc" }
js-bind-core = { path = "./core" }

[dev-dependencies]
wasm-bindgen = "0.2.85"
