[package]
name = "js-bind"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
		"core",
		"proc",
]

[workspace.package]
# REMEMBER: UPDATE parent workspace!
authors = []
homepage = "https://actuallyhappening.github.io/rust-firebase-js/"
repository = "https://github.com/ActuallyHappening/rust-firebase-js"
license = "MIT"
license-file = "LICENSE"
documentation = "https://actuallyhappening.github.io/rust-firebase-js/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
## Don't use this, for compiling / testing only
testing-slash-examples-feature-flag = []

[dependencies]

# Local deps
js-bind-proc = { path = "./proc" }
js-bind-core = { path = "./core" }

[dev-dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.35"

[[example]]
name = "trivial_usage"
required-features = ["testing-slash-examples-feature-flag"]
