[package]
name = "extract-doctest-core"
description = "Core library for extract-doctest"
version = "0.0.1"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = "1.0.71"
cargo_toml = "0.15.2"
proc-macro2 = "1.0.56"
quote = "1.0.27"
serde = { version = "1.0.163", features = ["derive"] }
syn = { version = "2.0.16", features = ["full", "extra-traits"] }
