[package]
name = "extract-doctests-proc"
description = "Proc macro exports for crate extract-doctest"
version = "0.0.1"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]

[dependencies.extract-doctests-core]
path = "../core"
# version = "0.0.1"
