[package]
name = "firebase-js-sys-proc"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js-sys/proc"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
quote = "1.0.26"
syn = "2.0.15"
