[package]
name = "firebase-js-sys-proc"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js-sys/proc"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
wasm-bindgen = "0.2.84"

[dependencies.syn]
version = "2.0.15"
features = ["proc-macro", "parsing", "full", "printing", "extra-traits"]
