[package]
name = "js-bind-core"
description = "js-bind proc macro impls & core functionality + types"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { version = "1.0.71", features = ["backtrace"] }
cfg-if = "1.0.0"
convert_case = "0.6.0"
derive-new = "0.5.9"
log = { version = "0.4.17", features = ["std"] }
proc-macro2 = "1.0.56"
quote = "1.0.26"
serde = { version = "1.0.160", features = ["derive"] }
smart-default = "0.7.1"
toml = "0.7.3"
wasm-bindgen = "0.2.84"

[dependencies.syn]
version = "2.0.15"
features = ["extra-traits", "full", "visit", "visit-mut"]

[dev-dependencies]
tempdir = "0.3.7"
