[package]
name = "js-bind-proc"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/ActuallyHappening/rust-firebase-js/tree/master/firebase-js-sys/proc"
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
# default = ["strict-feature-checks"]
default = ["strict-feature-checks", "node-not-web"]

strict-feature-checks = []
# default = ["node-not-web"]
# ## For testing purposes
node-not-web = []

[dependencies]
cfg-if = "1.0.0"
convert_case = "0.6.0"
log = { version = "0.4.17", features = ["std"] }
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["extra-traits", "full"] }
wasm-bindgen = "0.2.84"
