[package]
name = "firebase-js-sys-proc-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
log = { version = "0.4.17", features = ["std"] }
proc-macro2 = "1.0.56"
quote = "1.0.26"
wasm-bindgen = "0.2.84"

[dependencies.syn]
version = "2.0.15"
features = ["proc-macro", "parsing", "full", "printing", "extra-traits"]